2007-04-07  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Updated 
	parameter ranges of verilog-ams devices.

	* check_mdl.cpp: Fixed a variable substitution bug due to
	e.g. "- 950.0m" (mark the space).

2007-04-04  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: Improved the source-stepping algorithm.

	* hbsolver.cpp: Fixed order of frequencies in the multi-
	dimensional case.  Also added functionality for multi-
	dimensional frequency/time transformations.

2007-03-24  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp: Some more comments on the SVD diagonalization
	process added.

2007-03-21  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Fixed a bug in the data dependency tracking.
	It apparently occurred due o the many changes in the equation
	solver.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Modifying U*Prev values of non-linear devices
	when a time step has been rejected.

2007-03-03  Stefan Jahn  <stefan@lkcc.org>

	* property.cpp: Deleting vector variable, fixing memory leak.

	* check_netlist.cpp: Fixed memory leak for value lists in
	component properties.

2007-03-01  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Fixed memory leak.

	* equation.cpp: Fixed memory leak when application is evaluated
	twice or more times.

	* check_netlist.cpp: Fixed a subcircuit expansion bug occurring
	when at least 2 subcircuits are expanded at the top of the circuit
	list.

2007-02-27  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Running the new netlist_destroy_env() function.

	* check_netlist.cpp (netlist_destroy_env): New function which
	can be used to delete the top-level root environment(s).

	* environment.cpp: Deleting children in destructor.  Deleting
	results of variable references.  Bugfix: Passing definition list
	when running the solver.

2007-02-23  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Fixed a bug regarding substrates which are now
	also local to subcircuit environments.
