@@ -1,3 +1,8 @@
+2007-04-11  Stefan Jahn  <stefan@lkcc.org>
+
+	* scan_zvr.l, check_zvr.cpp: Supporting some more data formats of
+	the ZVR analyser.
+
 2007-04-07  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsdefs.h (qucs_definition_available): Updated 
